<resources>
    <string name="app_name">Note Bets</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="bets_note">BETS NOTE</string>
    <string name="status">STATUS</string>
    <string name="win">WIN</string>
    <string name="loos">LOOS</string>
    <string name="hover">HOVER</string>
    <string name="save">SAVE</string>
    <string name="add_new_bet">ADD NEW BET</string>
    <string name="enter_name">Enter Name</string>
    <string name="moneylines_details">The moneyline bet is another common type of wager at any sportsbook. There are no spreads and other challenges.\n\nA bettor’s sole objective is to predict which team will win a particular game. There are some differences between the market and how bettors approach it when seeking a payout.\n\nBettors can choose to lay points with a favorite or take points with an underdog. Instead of taking points with the favorite, they can risk more or less money depending on which side they support.\n\nIf they choose to back a favorite, bettors are required to take a higher risk. They can also back the underdog, which is a lower-risk option that could result in a greater payout.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moneylines">MONEYLINES</string>
    <string name="total_rounds">TOTAL ROUNDS</string>
    <string name="parlays">PARLAYS</string>
    <string name="futures">FUTURES</string>
    <string name="prop_bets">PROP BETS</string>
    <string name="betting_against_the_spread">BETTING AGAINST THE SPREAD</string>
    <string name="teaser_bets">TEASER BETS</string>
    <string name="over_under">OVER/UNDER</string>
    <string name="over_never_details">You don’t need to be concerned about who wins; the over/under is all you care about is the total score of both teams at the conclusion of the game. Below is a brief guide on how to place over-under bets in various sports.\n\nIf you are online betting on totals in baseball, you will likely see numbers between 6.5 and 12. If you see seven runs, it means that there is a pitcher’s duel. If the number is 12 or more, it usually means there are two pitchers who are bad and two strong offenses.\n\nIf you bet on totals in basketball, you can expect numbers to be in the vicinity of 200. One game projected to have a low-scoring game might see a total score of 180, while a high-scoring one could see a total score of 225.\n\nThe numbers are lower in college. The average number of totals you might see is 120 to 150. They have a slower shot clock, and therefore the games are shorter.\n\nFootball totals are based on the combined score of both teams. A low-scoring NFL game will usually have a total of anywhere between 30 and 35 points. Shootouts will see a total of between 50 and 55 points. Sometimes, these numbers may be higher. In college football, for example, the score would be somewhere between the 70s and 80s.\n\nTotal bets, like all other types of sports betting options, have grown. A total bet is not only available for pre-game wagers. Totals may also be available for individual teams or quarters, as well as live betting.\n\nIf you wager on the under, it means that you are betting more than the market’s applicable total points, runs, sets goals, or other markets. The opposite is true for the under: you expect fewer events to occur.\n\nThis is a common way to wager on over/under bets. If you anticipate 51 points or more, you take over, and if you expect 50 points or less, you take under. However, these markets may sometimes be less intuitive than others.</string>
    <string name="teaser_bets_details">Teasers require bettors to win bets on multiple sporting events. However, the twist is more favorable to bettors. Bettors can move the lines in their favor by a specific number of points instead of picking every game at the lines set out by the sportsbook.\n\nThis reduces the payout for winning the teaser, but it also increases the chance of winning the parlay.</string>
    <string name="betting_against_details">Spread betting is one of the mainstays of sports betting. Spread betting allows a bettor to predict which team will win by using a handicap and the score of the team they are placing their bets on.\n\nPoints will be subtracted from the score of a favorite team when you place a wager. Points will be added to the wager on an underdog.\n\nSpreads in sports such as the NHL or MLB, which are often close-score games, tend to be around 1.5 goals or runs. In addition, spreads can be larger in sports such as football and basketball, where there are wider margins in talent gaps.</string>
    <string name="prop_bets_details">Prop bets are a great way for sports bettors to get off the beaten path. Prop bets are short for proposition bets and cover intricate aspects of major sports games. Props can be used to cover individual performances or teams and are more detailed during larger events like the Super Bowl.\n\nMany team props cover topics such as whether a team will score on its first possession or if they will score an odd number or even number. Player props ask questions about how players perform in games; for instance, how many rebounds they collect during a contest.\n\nProp bets can be more entertaining than traditional online betting markets, but they require more knowledge about the tendencies of the players and teams involved.</string>
    <string name="parlays_details">"Parlays are a more fun way to make money with online betting on sports. The parlay requires that bettors place multiple bets, and all bets must win to make the parlay wager to cash.\n\nThese are usually done by casual bettors, who don’t wait for major events such as the Super Bowl or March Madness. If they hit, payouts are often much greater than single bet wins.</string>
    <string name="futures_details">Futures betting requires patience more than other types of bets because bettors must predict who will win a competition. These bets can be placed before the season starts, and bettors have an entire league from which to choose their champion.\n\nThis can lead to huge payouts in less predictable leagues, such as the NHL or MLB. Even though there are fewer players in college basketball and NCAA basketball, the payouts can still be impressive for accurately predicting the future.</string>
    <string name="total_rounds_detail">To bet on totals, you must predict how many points a game will have and whether it will exceed or fall below the online betting amount. This kind of betting is popular in the NFL and NBA, where stylistic differences are more apparent than in other sports.\n\nMany sports provide totals for both the individual teams and all of them. The total score for the NFL game between the New York Jets and the New England Patriots might be 42.5 points.\n\nThe Jets’ team total might be 17.5 points. This market is heavily bet on because it offers more options for bettors when they are betting on totals.</string>
    <string name="beat_the_bookies_with_the_overlyzer_live_tool">Beat the bookies with the Overlyzer Live Tool</string>
    <string name="_1x_on_home_outsiders_strategy">1X on home outsiders strategy</string>
    <string name="all_in_on_odds_at_1_20_strategy">All-in on odds at 1.20 strategy</string>
    <string name="the_1_3_2_6_system">The 1-3-2-6 system</string>
    <string name="the_fibonacci_betting_system">The Fibonacci betting system</string>
    <string name="the_kelly_formula">The Kelly formula</string>
    <string name="dutching_in_sports_betting">Dutching in sports betting</string>
    <string name="early_cashout_in_sports_betting">Early cashout in sports betting</string>
    <string name="bet_live_on_over_1_5_goals">Bet live on over 1.5 goals</string>
    <string name="beat_d">Overlyzer live tool maps the pressure situations in soccer matches from over 1,000 leagues and competitions – in real time. This allows Overlyzer users to see at a glance which team is applying more pressure and dominating the game./nThe “Game Offense Factor” also interprets whether a game is more offensive or more defensive based on various statistics and live performance data. On average, a value of 30% or more over the full duration of the match indicates that the game is being played offensively and actively with likely more goals…</string>
</resources>