<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.notebets.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_fragment_add_new"
            app:destination="@id/fragment_add_new" />
        <action
            android:id="@+id/action_navigation_home_to_betFragment"
            app:destination="@id/betFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.notebets.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.notebets.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/fragment_add_new"
        android:name="com.example.notebets.ui.AddNewFragment.fragment_add_new"
        android:label="fragment_fragment_add_new"
        tools:layout="@layout/fragment_add_new" >
        <action
            android:id="@+id/action_fragment_add_new_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/betFragment"
        android:name="com.example.notebets.ui.Fragment_Bet.BetFragment"
        android:label="fragment_bet"
        tools:layout="@layout/fragment_bet" >
        <action
            android:id="@+id/action_betFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>